Fix small problems on mobile
- youtube iframe was overflowing
- Too much gap between heading and body in a post

--- a/source/stylesheets/screen.css
+++ b/source/stylesheets/screen.css
@@ -245,6 +245,10 @@ article figure, article iframe {
     margin: auto;
 }
 
+article iframe {
+    max-width: 100%;
+}
+
 article figcaption {
     font-style: italic;
     text-align: center;
